fixed upload being cut off

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -17,7 +17,7 @@
   padding: 50px;
   width: 300px;
   height: 310px;
-  margin: 70px auto;
+  margin: 30px auto;
   border-radius: 10%;
   background-color: white;
 }
